# OneLight

./: .gitignore  Cargo.toml  README.md
src/: compose.rs  config.rs  container.rs  dashboard.rs  error.rs  gzip.rs  http.rs  image.rs  json.rs  main.rs  overlay.rs  registry.rs
src/platform/: mod.rs
src/platform/linux/: capabilities.rs  cgroup.rs  filesystem.rs  mod.rs  namespace.rs  network.rs  seccomp.rs  syscall.rs
src/platform/windows/: filesystem.rs  job.rs  mod.rs  network.rs  sandbox.rs  virtio.rs  vmm.rs  whp.rs  winapi.rs
