[package]
name = "holycontainer"
version = "2.0.0"
edition = "2021"
description = "Full container runtime with image pulling, micro-hypervisor, and orchestration — zero dependencies, pure Rust"
authors = ["HolyFL"]
license = "MIT"
readme = "README.md"

# ZERO dependencies. Every syscall, Win32 API call, tar header, and BPF instruction
# is hand-rolled from raw FFI. This is the real deal.
[dependencies]
